# dryfart

./: .gitignore  README.md  lines.sh
dfarted/: dfarted.py  hieliter.py  lines.sh  main.ui
dfvm/: a.out  alzhmr.c  alzhmr.h  build.sh  disasm.c  format.txt  lines.sh  main.c  norris.c  norris.h  opcodes.md  prof.sh  values.c  values.h  virmac.c  virmac.h
doc/: arrays.md  control.md  funcs.md  funcs_n_procs.md  index.md  ops.md  procs.md  start.md  strings.md  tables.md  values.md
docs/: control.md  funcs_n_procs.md  procs.md  start.md
flatvm/: Makefile  build.sh  err.txt  format.txt  main.cpp  (+3 more)
infarter/: Cargo.toml  build.rs  clean.sh  ex.df  lines.sh  transfart.sh  upvalues.md
infarter/src/: asterix.rs  asterix.rsrs  codegen.rs  dflib.rs  dryfart.bnf  genesis.rs  grammar.lalrpop  intrep.rs  lib_funcs.rs  lib_procs.rs  luthor.rs  main.rs  optimus.rs  parsnip.rs  semanal.rs  tarzan.rs  twalker.rs  util.rs
infarter/src/dflib/: funcs.rs  mod.rs  procs.rs
infarter/src/dflib/tables/: mod.rs
infarter/src/dflib/tables/dfstd/: mod.rs
infarter/src/optimus/: mod.rs  peep.rs
infarter/src/optimus/term/: mod.rs  red.rs  thr.rs
infarter/src/parsnip/: lex.rs  luthor.rs  mod.rs  pars.rs  toki.rs  turnip.rs
infarter/test/: .a.df.swp  a.df  a.py  array.df  bool.df  calc.df  chars.df  duck.df  eqal6.df  eqal6.df.tmp  expr.df  fib.df  fib.py  filterArr.df  fizzbuzz.df  functional.df.tmp  heavy_loop.df  hello.df  intpt.df  list.df  loop_br.df  loops.df  mandelbrot.df  matVecMul.df  md2.ppm  obj_func.df  operon.df  p.df  pf.df  pf2.df  powi.df  proc.df  qsort.df  runall.sh  splitWs.df  sum.df  sum.py  test1.df
infarter/tests/: chars.df  comments.df  decass.df  fibonacci.df  functional.df  heavy_loop.df  is_square.df  loop_scope.df  operon.df  powi.df  runall.sh  scope.df  sum.df  test1.df  test2.df  test3.df  w.df
(+83 files in other folders)
