[package]
name = "infarter"
version = "0.1.0"
authors = ["papanumba"]
edition = "2021"
description = "DryFart interpreter"
repository = "https://github.com/papanumba/dryfart"
license = "GPL-3.0"
build = "build.rs"

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer"] }
regex = "1.8.4"

[build-dependencies]
lalrpop = "0.20"
