[package]
name = "infarter"
version = "0.1.0"
authors = ["papanumba"]
edition = "2021"
description = "DryFart interpreter"
repository = "https://github.com/papanumba/dryfart"
license = "GPL-3.0"

[dependencies]
ascii = "1.1"
num_enum = "0.7.2"

[profile.release]
lto = true
strip = true
#panic = "abort"
#debug = false
